# dev

bookshelf/: index.html  package-lock.json  package.json  the_artifact.txt
bookshelf/src/: App.css  App.tsx
bookshelf/src-tauri/: Cargo.toml  tauri.conf.json
bookshelf/src-tauri/capabilities/: default.json
bookshelf/src-tauri/src/: commands.rs  db.rs  lib.rs  models.rs
bookshelf/src/pages/: EpubReaderPage.tsx  LibraryPage.css  LibraryPage.tsx  PdfReaderPage.tsx  ReaderPage.css  TxtReaderPage.tsx
bookshelf/src/store/: library.store.ts  reader.store.ts
bookshelf/src/styles/: themes.css
bookshelf/src/types/: book.ts
crypt/: README.md  main.py  requirements.txt  setup.py
crypt/crypt/: cli.py  crypto.py  store.py
crypt/crypt.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
floracity/: .env  app.json  package-lock.json  package.json
floracity/00-Implimentation/: 00-IMPLEMENTIERUNG.md
floracity/app/: _layout.tsx
floracity/app/(tabs)/: _layout.tsx  camera.tsx  index.tsx  leaderboard.tsx  profile.tsx
floracity/app/auth/: login.tsx  signup.tsx
floracity/app/plant/: [id].tsx
floracity/src/components/: ChiptunePlayer.tsx  EntryNumber.tsx  PixelPlant.tsx  PlantCard.tsx  PokedexHeader.tsx  PokedexScreen.tsx  TypeBadge.tsx  XPPopup.tsx
floracity/supabase/: SETUP.md
notion-clone/: .env.example  PLAN.md  docker-compose.yml
notion-clone/backend/: .env.example  Dockerfile  package-lock.json  package.json
notion-clone/frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
pokedex/: README.md  pokedex.py
(+52 files in other folders)
