[package]
name = "bookshelf"
version = "0.1.0"
description = "A Kindle-like reader for PDF, EPUB, and TXT files"
authors = ["babitzki"]
edition = "2021"

[lib]
name = "bookshelf_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
lopdf = "0.34"
zip = "2"
